 2. Remove most dialog toolbar menus and replace with buttons.
 3. Remove option to replace player icon with power button, as no longer
    applicable.
 4. Show track subtitles, if enabled in interface settings.
 5. Add custom favourite folder icon.
 6. Try to extract dominant, and not average, colour from image when using
    colour from cover.
 7. Invalidate artist list cache if user-defined role exclusion changed.
 8. Use coloured mobile navigation, progress, sliders, etc. even when tinting.
 9. Show full server-side interface settings page, but add a note that not all
    settings affect Material Skin.
10. Change defaults; use colour from cover, tinted background, unpinned queue.
11. Work-around item selection apparing 'stuck' after clear selection.
12. Remove 'Help' action from menu, and move link into 'Information' dialog.
13. Make sleep, alarm, and sync icons clickable links on non-mobile devices.
14. Combine sleep and alarm status items into 1 line in navigation drawer.
15. Allow apps to have better control over titlebar buttons.
16. Fix unpinned queue slide-in animation.
17. Don't force favourite folders to always be first, only if sort is enabled.
18. If drag favourite over folder then prompt if moving into folder or moving
    to position in list.
19. Allow drag'n'drop in grid view.

5.3.4
-----
1. Fix drag'n'drop on iOS by only using polyfill for Android.
2. If URL contains 'dndPolyfill=0' then always disable polyfill, likewise
   always enable if URL has 'dndPolyfill=1'
3. Fix subtitle links when 'Group all lists by release type' is enabled.
4. Show user-defined roles in 'Advanced search'
5. Fix unpinned queue border colour.

5.3.3
-----
1. Save player settings before opening 'Extra settings'.
2. Fix highlighting track of artist with user defined role.
3. Show user defined roles in track info.
4. Change genre icon.
5. Different highlight for matching artists as opposed to search in list.